@@ -42,7 +42,7 @@ public class ERC20TokenTool {
 
     public static BigInteger totalSupply(String contract, Web3j web3j) throws ExecutionException, InterruptedException {
         String name = "totalSupply";
-        List<TypeReference<?>> outputParameters = Arrays.asList(new TypeReference<Uint256>() {
+        List<TypeReference<?>> outputParameters = List.of(new TypeReference<Uint256>() {
         });
         Function function = new Function(name, new ArrayList<>(), outputParameters);
         EthCall response = query(function, Ox00, contract, web3j);
@@ -53,7 +53,7 @@ public class ERC20TokenTool {
 
     public static BigInteger decimals(String contract, Web3j web3j) throws ExecutionException, InterruptedException {
         String name = "decimals";
-        List<TypeReference<?>> outputParameters = Arrays.asList(new TypeReference<Uint256>() {
+        List<TypeReference<?>> outputParameters = List.of(new TypeReference<Uint256>() {
         });
         Function function = new Function(name, new ArrayList<>(), outputParameters);
         EthCall response = query(function, Ox00, contract, web3j);
@@ -63,7 +63,7 @@ public class ERC20TokenTool {
 
     public static String name(String contract, Web3j web3j) throws ExecutionException, InterruptedException {
         String name = "name";
-        List<TypeReference<?>> outputParameters = Arrays.asList(new TypeReference<Utf8String>() {
+        List<TypeReference<?>> outputParameters = List.of(new TypeReference<Utf8String>() {
         });
         Function function = new Function(name, new ArrayList<>(), outputParameters);
         EthCall response = query(function, Ox00, contract, web3j);
@@ -73,7 +73,7 @@ public class ERC20TokenTool {
 
     public static String symbol(String contract, Web3j web3j) throws ExecutionException, InterruptedException {
         String name = "symbol";
-        List<TypeReference<?>> outputParameters = Arrays.asList(new TypeReference<Utf8String>() {
+        List<TypeReference<?>> outputParameters = List.of(new TypeReference<Utf8String>() {
         });
         Function function = new Function(name, new ArrayList<>(), outputParameters);
         EthCall response = query(function, Ox00, contract, web3j);
@@ -83,8 +83,8 @@ public class ERC20TokenTool {
 
     public static String balanceOf(String address, String contract, Web3j web3j) throws ExecutionException, InterruptedException {
         Function function = new Function("balanceOf",
-                Arrays.asList(new Address(address)),
-                Arrays.asList(new TypeReference<Address>() {
+                List.of(new Address(address)),
+                List.of(new TypeReference<Address>() {
                 }));
 
         EthCall response = query(function, address, contract, web3j);
@@ -107,7 +107,7 @@ public class ERC20TokenTool {
     public static String legacyTransfer(String to, BigInteger amount, String contract, Credentials credentials, Web3j web3j) throws ExecutionException, InterruptedException, IOException {
         Function function = new Function("transfer",
                 Arrays.asList(new Address(to), new Uint256(amount)),
-                Arrays.asList(new TypeReference<Address>() {
+                List.of(new TypeReference<Address>() {
                 }));
 
         //获取交易笔数
@@ -130,10 +130,10 @@ public class ERC20TokenTool {
         return web3j.ethSendRawTransaction(hexValue).sendAsync().get().getTransactionHash();
     }
 
-    public static String transfer(String to, BigInteger amount, String contract, BigInteger maxPriorityFeePerGas, BigInteger maxFeePerGas, Credentials credentials, Web3j web3j) throws ExecutionException, InterruptedException, IOException {
+    public static EthSendTransaction transfer(String to, BigInteger amount, String contract, BigInteger maxPriorityFeePerGas, BigInteger maxFeePerGas, Credentials credentials, Web3j web3j) throws ExecutionException, InterruptedException, IOException {
         Function function = new Function("transfer",
                 Arrays.asList(new Address(to), new Uint256(amount)),
-                Arrays.asList(new TypeReference<Address>() {
+                List.of(new TypeReference<Address>() {
                 }));
 
         //获取交易笔数
@@ -154,7 +154,7 @@ public class ERC20TokenTool {
         EthSendTransaction transaction = manager.sendEIP1559Transaction(chainId, maxPriorityFeePerGas, maxFeePerGas, gasLimit, contract, rawData, amount);
 
         //发起交易
-        return transaction.getTransactionHash();
+        return transaction;
     }
 
     private static EthCall query(Function function, String address, String contract, Web3j web3j) throws InterruptedException, ExecutionException {
@@ -167,10 +167,9 @@ public class ERC20TokenTool {
         return web3j.ethCall(transaction, DefaultBlockParameterName.LATEST).sendAsync().get();
     }
 
-    public static String balanceOf2(String address, String contract, Web3j web3j) throws IOException {
+    public static EthCall balanceOf2(String address, String contract, Web3j web3j) throws IOException {
         Transaction transaction = Transaction.createEthCallTransaction(address, contract, prepareData(address));
-        EthCall response = web3j.ethCall(transaction, DefaultBlockParameterName.LATEST).send();
-        return hex2dec(response.getValue());
+        return web3j.ethCall(transaction, DefaultBlockParameterName.LATEST).send();
     }
 
     private static final String DATA_PREFIX = "0x70a08231000000000000000000000000";
